Hardened system prompt for variable substitution - Also hardened against prompt injection - Added corresponding tests

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 PYTHONPATH=./src
+LANGSMITH_TRACING=false
+LANGSMITH_ENDPOINT="https://api.smith.langchain.com"
+LANGSMITH_PROJECT="vulcan-core-dev"
