Added explainability reporting feature - Enhanced Condition for tracing last results - Made conditions and actions more DRY - Added AI-generated tests for report generation.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -43,7 +43,7 @@
         "-d",
         "-d",
         "TCP-LISTEN:11434,fork",
-        "TCP:${input:olamma-host}:11434"
+        "TCP:${input:ollama-host}:11434"
       ],
       "group": "test",
       "presentation": {
