--- a/.github/actions/prepare/action.yml
+++ b/.github/actions/prepare/action.yml
@@ -1,5 +1,5 @@
 # SPDX-License-Identifier: Apache-2.0
-# Copyright 2025 Latchfield Technologies http://latchfield.com
+# Copyright 2026 Latchfield Technologies http://latchfield.com
 name: "Prepare the Python environment"
 description: "Prepares the Python environment leveraging cache where possible"
 
@@ -15,10 +15,9 @@ runs:
           sudo mkdir -p /root/.local/bin
           sudo find /root/ -type d -exec chmod a+rx {} \;
           sudo chmod -R a+r /root/.local/bin          
-          sudo chown -R $(whoami) /opt/pipx/venvs /opt/pipx_bin
-        fi            
+        fi
 
-        # Ensure pipx and poetry are on the PATH
+        # Ensure local binaries are on the PATH
         echo "/root/.local/bin" >> "$GITHUB_PATH"
         echo "${GITHUB_WORKSPACE}/.venv/bin" >> "$GITHUB_PATH"
 
@@ -27,35 +26,28 @@ runs:
         mkdir -p ./reports/security
         mkdir -p ./reports/analysis
 
-        # Lookup required Poetry version
-        echo "poetry_version=$(grep -Po 'requires-poetry\s*=\s*"\K[^0-9]*\K[^"]*' pyproject.toml)" >> $GITHUB_OUTPUT
+        # Lookup required uv version
+        echo "uv_version=$(grep -Po 'required-version\s*=\s*"\K[^"]*' pyproject.toml)" >> $GITHUB_OUTPUT
 
     - name: Configure pipx cache
-      uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 #v4.2.4
+      uses: actions/cache@cdf6c1fa76f9f475f3d7449005a359c84ca0f306 #v5.0.3
       id: pipx
       with:
         path: |
-          /root/.local/pipx/venvs
-          /root/.local/bin/poetry
-          /opt/pipx/venvs
-          /opt/pipx_bin
-        key: pipx-poetry-${{ steps.config.outputs.poetry_version }}
+          /root/.local/bin/
+          /root/.local/share/pipx/
+          /root/.cache/uv/
+        key: pipx-uv-${{ steps.config.outputs.uv_version }}
 
-    - name: Install Poetry with pipx
+    - name: Install uv with pipx
       if: ${{ steps.pipx.outputs.cache-hit != 'true' }}
       shell: bash
       run: |
-        pipx install poetry==${{ steps.config.outputs.poetry_version }}
-
-    - name: Setup Python
-      uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 #v5.6.0
-      with:
-        python-version-file: "pyproject.toml"
-        cache: "poetry"
+        pipx install -f "uv${{ steps.config.outputs.uv_version }}"
 
     - name: Install Python dependencies
       shell: bash
       run: |
-        python --version
-        poetry --version
-        poetry install --no-ansi --all-extras
+        uv python ls
+        uv --version
+        uv sync --link-mode symlink --all-extras
