--- a/.github/workflows/ci-publish.yml
+++ b/.github/workflows/ci-publish.yml
@@ -32,6 +32,7 @@ jobs:
       build-cache-hit: ${{ steps.build.outputs.cache-hit && !inputs.skip_cache }}
       repo_name: ${{ steps.config.outputs.repo_name }}
       project_name: ${{ steps.config.outputs.project_name }}
+      repository_url: ${{ steps.config.outputs.repository_url }}
     steps:
       - name: Sparse checkout codebase
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd #v6.0.2
