--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,16 +2,16 @@
 # Copyright 2026 Latchfield Technologies http://latchfield.com
 [project]
 name = "vulcan-core"
-version="1.2.1"
+version="1.2.2"
 license="Apache-2.0"
 description = "AI-Hybrid Rules Engine for Logical Reasoning."
 readme = "README.md"
 authors = []
 keywords = ["rules", "logic", "reasoning", "ai", "artificial intelligence", "RAG", "LLM"]
-requires-python = ">=3.12,<4.0"
-dependencies = ["pyyaml (>=6.0.2,<7.0.0)",
-                "pydantic (>=2.11.7,<3.0.0)",
-                "langchain==0.3.*",
+requires-python = ">=3.12,<3.15"
+dependencies = ["pyyaml(>=6.0.1,<=6.1)",
+                "pydantic(>=2.0,<=2.13)",
+                "langchain(>=1.0,<1.3)",
 ]
 classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
@@ -21,9 +21,8 @@ classifiers = [
 
 [project.optional-dependencies]
 openai = [
-  "langchain-openai==0.3.*"
+  "langchain-openai(>=1.0,<=1.2)"
 ]
-
 
 [project.urls]
 homepage = "https://latchfield.com/vulcan"
@@ -36,6 +35,8 @@ build-backend = "uv_build"
 
 [tool.uv]
 required-version = "==0.9.*"
+python-preference = "only-managed"
+# no-build = true
 
 [tool.ruff]
 line-length = 120
@@ -64,6 +65,9 @@ convention = "google"
 [tool.ruff.lint.isort]
 combine-as-imports = true
 
+[tool.deptry.package_module_name_map]
+"langchain" = "langchain_core"
+
 [tool.pyright]
 typeCheckingMode = "basic"
 reportUndefinedVariable = false
@@ -74,6 +78,12 @@ required_plugins = ["pytest-cov"]
 pythonpath = ["src"]
 addopts = "-rA --showlocals --color=yes --tb=short -q --cov-report=html --cov=src"
 asyncio_default_fixture_loop_scope = "function"
+filterwarnings = [
+    "ignore::DeprecationWarning",
+    "ignore::UserWarning",
+    "default:::tests",
+    "default:::vulcan_core",
+]
 
 [tool.coverage.run]
 source = ["src"]
@@ -89,23 +99,24 @@ dev = [
 lint = [
     "bandit==1.9.*",
     "deptry==0.24.*",
-    "ruff==0.14.*",
-    "pyright[nodejs]==1.1.402",
+    "ruff==0.15.*",
+    "pyright[nodejs]==1.1.408",
 ]
 test = [
-    "pytest==8.4.*",
-    "pytest-asyncio==1.0.*",
+    "pytest==9.0.*",
+    "pytest-asyncio==1.3.*",
     "pytest-timeout==2.4.*",
-    "pytest-cov==6.2.*",
-    "pytest-xdist==3.7.*",
+    "pytest-cov==7.0.*",
+    "pytest-xdist==3.8.*",
     "doppler-env==0.3.*",
-    "langchain-chroma==0.2.*"
+    "langchain-chroma==1.1.*"
 ]
 lab = [
     "ipykernel==6.*",
     "ipywidgets==8.1.*",
 ]
 tools = [
-    "tldr",
-    "twine==6.1.*"
+    "tldr>=3",
+    "twine==6.1.*",
+    "rust-just==1.46.*"
 ]
