--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -35,6 +35,7 @@ jobs:
       security-cache-hit: ${{ steps.security.outputs.cache-hit && !inputs.skip_cache }}
       analysis-cache-hit: ${{ steps.analysis.outputs.cache-hit && !inputs.skip_cache }}
       build-cache-hit: ${{ steps.build.outputs.cache-hit && !inputs.skip_cache }}
+      python_version: ${{ steps.config.outputs.python_version }}
       python_versions: ${{ steps.config.outputs.python_versions }}
       python_lowest_ver: ${{ steps.config.outputs.python_lowest_ver }}
     steps:
@@ -106,11 +107,12 @@ jobs:
         shell: bash
         run: |
           # Resolve the Python versions supported by the project:
+          echo "python_version=$(just --evaluate py_version)" >> $GITHUB_OUTPUT
           echo "python_versions=$(just --evaluate py_other_vers | jq -Rc 'split(" ") | map(select(length > 0))')" >> $GITHUB_OUTPUT
           echo "python_lowest_ver=$(just --evaluate py_lowest_ver)" >> $GITHUB_OUTPUT
 
   compatibility:
-    name: "Compatibility Test on Python ${{ matrix.python_version }}"
+    name: Compatibility Tests on Python ${{ matrix.python_version }}
     runs-on: ubuntu-24.04
     needs: prebuild
     concurrency:
@@ -155,7 +157,7 @@ jobs:
           key: compatibility-${{ matrix.python_version }}-${{ github.sha }}
         
   tests:
-    name: Functional Tests
+    name: Functional Tests on Python ${{ needs.prebuild.outputs.python_version }}
     runs-on: ubuntu-24.04
     needs: prebuild
     if: ${{ needs.prebuild.outputs.tests-cache-hit != 'true' }}
