--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,9 +35,9 @@ build-backend = "hatchling.build"
 
 [tool.hatch.version]
 source = "vcs"
+fallback-version = "0.0.0"
 
 [tool.hatch.build.hooks.vcs]
-fallback-version = "0.0.0"
 version-file = "src/vulcan_core/__about__.py"
 
 [tool.hatch.version.raw-options]
@@ -48,7 +48,8 @@ local_scheme = "node-and-date"
 required-version = "==0.9.*"
 python-preference = "only-managed"
 cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true } }]
-# no-build = true
+# no-build = true # Doesn't work currently https://github.com/astral-sh/uv/issues/17416
+# no-binary-package = ["vulcan-core"] # Workaround for sync issue https://github.com/astral-sh/uv/issues/17416
 
 [tool.ruff]
 line-length = 120
@@ -66,10 +67,12 @@ ignore = ["E111", "E114", "E117", "D206", "D300", "Q000",
           "Q001", "Q002", "Q003", "COM812", "COM819",
           "ISC001", "ISC002", "S311"]
 
+[tool.ruff.lint.per-file-ignores]
 # Ignore some rules for tests
 # https://github.com/astral-sh/ruff/issues/4368#issue-1705468153
-[tool.ruff.lint.per-file-ignores]
 "tests/**/*.py" = ["S101", "ARG", "FBT"]
+# Ignore all rules for generated about file
+"src/vulcan_core/__about__.py" = ["ALL"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
