--- a/.github/actions/prepare/action.yml
+++ b/.github/actions/prepare/action.yml
@@ -3,6 +3,12 @@
 name: "Prepare the Python environment"
 description: "Prepares the Python environment leveraging cache where possible"
 
+inputs:
+  skip_cache_restore:
+    description: "Skip restoring the uv cache even if it exists"
+    required: false
+    default: "false"
+
 runs:
   using: "composite"
   steps:
@@ -19,7 +25,10 @@ runs:
         echo "PIPX_HOME=${HOME}/.local/share/pipx" >> $GITHUB_ENV
         echo "PIPX_BIN_DIR=${HOME}/.local/share/pipx/bin" >> $GITHUB_ENV
 
-        # Create report directores        
+        # Configure uv environment
+        echo "UV_LINK_MODE=symlink" >> $GITHUB_ENV
+
+        # Create report directories        
         set -x
         mkdir -p ./reports/tests
         mkdir -p ./reports/security
@@ -32,31 +41,84 @@ runs:
         UV_VERSION=$(python3 -c "import sys, json, packaging.specifiers, packaging.version; spec = packaging.specifiers.SpecifierSet('${SPEC}'); data = json.load(sys.stdin); print(max((v for v in data['releases'].keys() if v in spec), key=packaging.version.Version, default=''))" < <(curl -s "https://pypi.org/pypi/${PACKAGE}/json"))
         echo "uv_version=${UV_VERSION}" >> $GITHUB_OUTPUT
 
-    - name: Configure pipx cache
+    # Cache Lookups
+    - name: Lookup pipx cache
       uses: actions/cache@cdf6c1fa76f9f475f3d7449005a359c84ca0f306 #v5.0.3
-      id: pipx
+      id: pipx_lookup
+      with:
+        lookup-only: true
+        path: |
+          /home/runner/.local/share/pipx/
+        key: pipx-uv-${{ steps.config.outputs.uv_version }}
+
+    - name: Lookup uv cache
+      uses: actions/cache@cdf6c1fa76f9f475f3d7449005a359c84ca0f306 #v5.0.3
+      id: uv_lookup
+      with:
+        lookup-only: true
+        path: |
+          /home/runner/.cache/uv/
+          /home/runner/.local/share/uv/
+          .venv
+        key: uv-${{ hashFiles('uv.lock') }}
+
+    # Pipx Cache Control
+    - name: Restore pipx cache
+      uses: actions/cache/restore@cdf6c1fa76f9f475f3d7449005a359c84ca0f306 #v5.0.3
+      if: ${{ steps.pipx_lookup.outputs.cache-hit == 'true' && (inputs.skip_cache_restore != 'true' || steps.uv_lookup.outputs.cache-hit != 'true') }}
       with:
         path: |
           /home/runner/.local/share/pipx/
         key: pipx-uv-${{ steps.config.outputs.uv_version }}
 
-    - name: Configure uv cache
-      uses: actions/cache@cdf6c1fa76f9f475f3d7449005a359c84ca0f306 #v5.0.3
-      id: uv
+    - name: Report pipx cache restore skipped
+      if: ${{ steps.pipx_lookup.outputs.cache-hit == 'true' && inputs.skip_cache_restore == 'true' && steps.uv_lookup.outputs.cache-hit == 'true' }}
+      shell: bash
+      run: |
+        echo "::notice::Skipped pipx cache restoration due to skip_cache_restore==true"
+
+    # UV Cache Control
+    - name: Restore uv cache
+      uses: actions/cache/restore@cdf6c1fa76f9f475f3d7449005a359c84ca0f306 #v5.0.3
+      if: ${{ steps.uv_lookup.outputs.cache-hit == 'true' && inputs.skip_cache_restore != 'true' }}
       with:
         path: |
           /home/runner/.cache/uv/
+          /home/runner/.local/share/uv/
+          .venv
         key: uv-${{ hashFiles('uv.lock') }}
 
+    - name: Report uv cache restore skipped
+      if: ${{ steps.uv_lookup.outputs.cache-hit == 'true' && inputs.skip_cache_restore == 'true' }}
+      shell: bash
+      run: |
+        echo "::notice::Skipped uv cache restoration due to skip_cache_restore==true"
+
+    # Install tools and dependencies
     - name: Install pipx tools
-      if: ${{ steps.pipx.outputs.cache-hit != 'true' }}
+      if: ${{ steps.pipx_lookup.outputs.cache-hit != 'true' }}
       shell: bash
       run: |
         set -x
         pipx environment
         pipx install -f "uv==${{ steps.config.outputs.uv_version }}"
 
+    - name: Warm UV cache
+      if: ${{ steps.uv_lookup.outputs.cache-hit != 'true' }}
+      shell: bash
+      run: |
+        set -x
+        uv run just warm_uv_cache
+
     - name: Install package dependencies
+      if: ${{ steps.uv_lookup.outputs.cache-hit != 'true' }}
+      shell: bash
+      run: |
+        set -x
+        uv sync --all-extras
+
+    - name: Report on environment
+      if: ${{ steps.uv_lookup.outputs.cache-hit != 'true' || inputs.skip_cache_restore != 'true' }}
       shell: bash
       run: |
         set -x
@@ -64,5 +126,5 @@ runs:
         readlink -f $(which uv)
         uv --version
         uv cache dir
-        uv python ls        
-        uv sync --link-mode symlink --all-extras
+        which python
+        python --version
