--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,16 +2,16 @@
 # Copyright 2026 Latchfield Technologies http://latchfield.com
 [project]
 name = "vulcan-core"
-version="1.2.1"
+dynamic = ["version"]
 license="Apache-2.0"
 description = "AI-Hybrid Rules Engine for Logical Reasoning."
 readme = "README.md"
 authors = []
 keywords = ["rules", "logic", "reasoning", "ai", "artificial intelligence", "RAG", "LLM"]
-requires-python = ">=3.12,<4.0"
-dependencies = ["pyyaml (>=6.0.2,<7.0.0)",
-                "pydantic (>=2.11.7,<3.0.0)",
-                "langchain==0.3.*",
+requires-python = ">=3.12,<3.15"
+dependencies = ["pyyaml(>=6.0.1,<=6.1)",
+                "pydantic(>=2.0,<=2.13)",
+                "langchain(>=1.0,<1.3)",
 ]
 classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
@@ -21,9 +21,8 @@ classifiers = [
 
 [project.optional-dependencies]
 openai = [
-  "langchain-openai==0.3.*"
+  "langchain-openai(>=1.0,<=1.2)"
 ]
-
 
 [project.urls]
 homepage = "https://latchfield.com/vulcan"
@@ -31,11 +30,26 @@ repository = "https://github.com/latchfield/vulcan-core"
 documentation = "https://latchfield.com/vulcan/docs"
 
 [build-system]
-requires = ["uv_build==0.9.*"]
-build-backend = "uv_build"
+requires = ["hatchling==1.28.*","hatch-vcs==0.5.0"]
+build-backend = "hatchling.build"
+
+[tool.hatch.version]
+source = "vcs"
+fallback-version = "0.0.0"
+
+[tool.hatch.build.hooks.vcs]
+version-file = "src/vulcan_core/__about__.py"
+
+[tool.hatch.version.raw-options]
+version_scheme = "no-guess-dev"
+local_scheme = "node-and-date"
 
 [tool.uv]
 required-version = "==0.9.*"
+python-preference = "only-managed"
+cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true } }]
+# no-build = true # Doesn't work currently https://github.com/astral-sh/uv/issues/17416
+# no-binary-package = ["vulcan-core"] # Workaround for sync issue https://github.com/astral-sh/uv/issues/17416
 
 [tool.ruff]
 line-length = 120
@@ -53,16 +67,21 @@ ignore = ["E111", "E114", "E117", "D206", "D300", "Q000",
           "Q001", "Q002", "Q003", "COM812", "COM819",
           "ISC001", "ISC002", "S311"]
 
+[tool.ruff.lint.per-file-ignores]
 # Ignore some rules for tests
 # https://github.com/astral-sh/ruff/issues/4368#issue-1705468153
-[tool.ruff.lint.per-file-ignores]
 "tests/**/*.py" = ["S101", "ARG", "FBT"]
+# Ignore all rules for generated about file
+"src/vulcan_core/__about__.py" = ["ALL"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
 
 [tool.ruff.lint.isort]
 combine-as-imports = true
+
+[tool.deptry.package_module_name_map]
+"langchain" = "langchain_core"
 
 [tool.pyright]
 typeCheckingMode = "basic"
@@ -74,6 +93,12 @@ required_plugins = ["pytest-cov"]
 pythonpath = ["src"]
 addopts = "-rA --showlocals --color=yes --tb=short -q --cov-report=html --cov=src"
 asyncio_default_fixture_loop_scope = "function"
+filterwarnings = [
+    "ignore::DeprecationWarning",
+    "ignore::UserWarning",
+    "default:::tests",
+    "default:::vulcan_core",
+]
 
 [tool.coverage.run]
 source = ["src"]
@@ -89,23 +114,24 @@ dev = [
 lint = [
     "bandit==1.9.*",
     "deptry==0.24.*",
-    "ruff==0.14.*",
-    "pyright[nodejs]==1.1.402",
+    "ruff==0.15.*",
+    "pyright[nodejs]==1.1.408",
 ]
 test = [
-    "pytest==8.4.*",
-    "pytest-asyncio==1.0.*",
+    "pytest==9.0.*",
+    "pytest-asyncio==1.3.*",
     "pytest-timeout==2.4.*",
-    "pytest-cov==6.2.*",
-    "pytest-xdist==3.7.*",
+    "pytest-cov==7.0.*",
+    "pytest-xdist==3.8.*",
     "doppler-env==0.3.*",
-    "langchain-chroma==0.2.*"
+    "langchain-chroma==1.1.*"
 ]
 lab = [
     "ipykernel==6.*",
     "ipywidgets==8.1.*",
 ]
 tools = [
-    "tldr",
-    "twine==6.1.*"
+    "tldr>=3",
+    "twine==6.1.*",
+    "rust-just==1.46.*"
 ]
